--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "date-fns": "^2.11.1",
-    "node-sass": "^4.13.1",
-    "react": "^16.13.1",
+    "react": "^19.0.0",
     "react-date-range": "^1.0.3",
-    "react-dom": "^16.13.1",
+    "react-dom": "^19.0.0",
     "react-html-parser": "^2.0.2",
     "react-redux": "^7.2.0",
     "react-reveal": "^1.2.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-router-dom": "^7.1.3",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^5.5.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^5.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.83.4",
+    "sass-loader": "^16.0.4"
   }
 }
