--- a/package.json
+++ b/package.json
@@ -3,23 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.2",
-    "date-fns": "^2.11.1",
-    "node-sass": "^4.13.1",
-    "react": "^16.13.1",
-    "react-date-range": "^1.0.3",
-    "react-dom": "^16.13.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
+    "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
+    "react": "^19.0.0",
+    "react-date-range": "^2.0.1",
+    "react-dom": "^19.0.0",
     "react-html-parser": "^2.0.2",
-    "react-redux": "^7.2.0",
+    "react-redux": "^9.2.0",
     "react-reveal": "^1.2.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
-    "react-toastify": "^5.5.0",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "react-router-dom": "^7.1.3",
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^11.0.3",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
+    "sass": "^1.83.4"
   },
   "scripts": {
     "start": "react-scripts start",
