--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
     "axios": "^1.7.9",
+    "buffer": "^6.0.3",
     "date-fns": "^4.1.0",
     "react": "^19.0.0",
     "react-date-range": "^2.0.1",
