--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.9",
     "buffer": "^6.0.3",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.0.6",
     "react": "^19.0.0",
     "react-date-range": "^2.0.1",
     "react-dom": "^19.0.0",
