--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "@testing-library/user-event": "^14.6.1",
     "axios": "^1.7.9",
     "buffer": "^6.0.3",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.2.0",
     "framer-motion": "^12.0.6",
+    "html-react-parser": "^5.2.2",
     "react": "^19.0.0",
     "react-date-range": "^2.0.1",
     "react-dom": "^19.0.0",
     "react-html-parser": "^2.0.2",
     "react-redux": "^9.2.0",
-    "react-reveal": "^1.2.2",
     "react-router-dom": "^7.1.3",
     "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.3",
